# edflib

./: Build.bat  CMakeLists.txt  Edflib.vcxproj  Edflib.vcxproj.filters  README.md  edflib.cc  edflib.hh  edflib_api.cc  edflib_api.hh  pch.h
csharp/: EDFWrapper.cs  EDFWrapper.csproj  Program.cs
include/: edflib.hh  edflib_api.hh
src/: edflib.cc  edflib_api.cc
